export const snapshot = {};

snapshot[`url and htmlUrl update href 1`] = `2`;

snapshot[`url and htmlUrl update href 2`] = `
{
  formats: [
    {
      includesPath: undefined,
      key: ".tmpl.ts",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.js",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.json",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".json",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".md",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".js",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".ts",
      pageType: undefined,
    },
    {
      includesPath: "_includes",
      key: ".njk",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yaml",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yml",
      pageType: "page",
    },
  ],
}
`;

snapshot[`url and htmlUrl update href 3`] = `
{
  content: '\\n    <!DOCTYPE html>\\n    <html lang="en">\\n        <head>\\n            <title>Default Filter</title>\\n        </head>\\n        <body>\\n            <a id="url" href="https://example.com/test/url/">Url</a>\\n            <a id="htmlUrl" href="https://example.com/test/htmlUrl/">htmlUrl</a>\\n            <template>\\n              <h1>Template content</h1>\\n            </template>\\n        </body>\\n    </html>\\n  ',
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "Default Filter",
    url: "/default-filter/",
  },
  dest: {
    ext: ".html",
    path: "/default-filter/index",
  },
  src: {
    ext: ".tmpl.js",
    path: "/default-filter",
  },
}
`;

snapshot[`url and htmlUrl update href 4`] = `
{
  content: '\\n    <!DOCTYPE html>\\n    <html lang="en">\\n        <head>\\n            <title>Renamed Filter</title>\\n        </head>\\n        <body>\\n            <a id="urlify" href="undefined">Urlify</a>\\n            undefined\\n        </body>\\n    </html>\\n  ',
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "Renamed Filter",
    url: "/renamed-filter/",
  },
  dest: {
    ext: ".html",
    path: "/renamed-filter/index",
  },
  src: {
    ext: ".tmpl.js",
    path: "/renamed-filter",
  },
}
`;

snapshot[`configure url and htmlUrl names 1`] = `2`;

snapshot[`configure url and htmlUrl names 2`] = `
{
  formats: [
    {
      includesPath: undefined,
      key: ".tmpl.ts",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.js",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.json",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".json",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".md",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".js",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".ts",
      pageType: undefined,
    },
    {
      includesPath: "_includes",
      key: ".njk",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yaml",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yml",
      pageType: "page",
    },
  ],
}
`;

snapshot[`configure url and htmlUrl names 3`] = `
{
  content: '\\n    <!DOCTYPE html>\\n    <html lang="en">\\n        <head>\\n            <title>Default Filter</title>\\n        </head>\\n        <body>\\n            <a id="url" href="undefined">Url</a>\\n            undefined\\n            <template>\\n              <h1>Template content</h1>\\n            </template>\\n        </body>\\n    </html>\\n  ',
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "Default Filter",
    url: "/default-filter/",
  },
  dest: {
    ext: ".html",
    path: "/default-filter/index",
  },
  src: {
    ext: ".tmpl.js",
    path: "/default-filter",
  },
}
`;

snapshot[`configure url and htmlUrl names 4`] = `
{
  content: '\\n    <!DOCTYPE html>\\n    <html lang="en">\\n        <head>\\n            <title>Renamed Filter</title>\\n        </head>\\n        <body>\\n            <a id="urlify" href="https://example.com/urlify/">Urlify</a>\\n            <a id="htmlUrlify" href="https://example.com/htmlUrlify/">htmlUrlify</a>\\n        </body>\\n    </html>\\n  ',
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "Renamed Filter",
    url: "/renamed-filter/",
  },
  dest: {
    ext: ".html",
    path: "/renamed-filter/index",
  },
  src: {
    ext: ".tmpl.js",
    path: "/renamed-filter",
  },
}
`;
